@@ -1,3 +1,9 @@
+2005-04-15  Kjartan Maraas  <kmaraas@gnome.org>
+
+	* load.c: (create_mixer_collection): Plug a few leaks.
+	* preferences.c: (gnome_volume_applet_preferences_change),
+	(cb_track_select): Same here.
+
 2005-04-04  Davyd Madeley  <davyd@madeley.id.au>
 
         * applet.c: (gnome_volume_applet_toggle_mute),
